src/objects/FinanceAccount__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance Accounts</relationshipLabel>
        <relationshipName>Finance_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Commission__c</fullName>
        <label>Agency Commission</label>
        <picklist>
            <picklistValues>
                <fullName>0.00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCIMailCustomerID__c</fullName>
        <formula>Account__r.CCIMailCustID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCIMailCustomerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCIMetroCustomerID__c</fullName>
        <formula>Account__r.CCIMetroCustID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCIMetroCustomerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>The Date the Finance Account was closed.</description>
        <inlineHelpText>The Date the Finance Account was closed.</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseStatus__c</fullName>
        <description>The Close status of the Account.</description>
        <inlineHelpText>The Close status of the Account.</inlineHelpText>
        <label>Close Status</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Finance Accounts</relationshipLabel>
        <relationshipName>Finance_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finance_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>TODO: Add picklist values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-BDWO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDWO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepay Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoCCIInt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoCCIInt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDestinationContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Destination Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must belong to the associated Account.</errorMessage>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Finance Accounts</relationshipLabel>
        <relationshipName>Finance_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FDCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FD Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinanceAccountNo__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Finance Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Finance_Id__c</fullName>
        <label>Finance Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicedRevenueLastYear__c</fullName>
        <description>CCI</description>
        <label>CCI InvoicedRevenueLastYear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoicedRevenueYTD__c</fullName>
        <description>CCI InvoicedRevenueYTD</description>
        <label>CCI InvoicedRevenueYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoicingFrequency__c</fullName>
        <label>Invoicing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDMINTHLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREPAYMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MonthlyStatement__c</fullName>
        <label>Monthly Statement</label>
        <picklist>
            <picklistValues>
                <fullName>House Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always Receive Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Receive Statements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neo_ID__c</fullName>
        <inlineHelpText>Neo ID</inlineHelpText>
        <label>Neo ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_ID__c</fullName>
        <label>SOP ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Source__c</fullName>
        <label>SOP Source</label>
        <picklist>
            <picklistValues>
                <fullName>ADV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>This field is created  to disallow creation of multiple finance accounts for same account and company

GAR-796 - Removing Uniqueness in Finance Account to accommodate Financial Force.</description>
        <label>UniqueName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Finance Account</label>
    <nameField>
        <label>Finance Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Accounts</pluralLabel>
    <recordTypes>
        <fullName>ReadOnly</fullName>
        <active>true</active>
        <label>ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>master</fullName>
        <active>true</active>
        <label>master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountLookupValidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Account__c )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CompanyLookupValidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Company__c )</errorConditionFormula>
        <errorDisplayField>Company__c</errorDisplayField>
        <errorMessage>Company cannot be blank</errorMessage>
    </validationRules>
</CustomObject>